--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -25,7 +25,9 @@
       "mywork":"I Miei Lavori",
       "myworkd":"Per avere un'idea delle mie esperienze passate, consultate i miei progetti più recenti qui sotto.",
       "myworkt":"I Miei Lavori | Davide Di Marsilio",
-      "myworktd":"Scopri i progetti più recenti di Davide Di Marsilio"
+      "myworktd":"Scopri i progetti più recenti di Davide Di Marsilio",
+      "restauro":"Restaurazioni",
+      "restaurod":"Ripristino foto antiche digitalmente, elimando danni e aggiungendo i colori che avrebbero potuto avere. L'obbiettivo è quello di donare nuova vita alle immagini del passato."
     },
     "404":{
       "notfound":"Non trovata",
