--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -29,7 +29,9 @@
       "myworkt":"My Work | Davide Di Marsilio",
       "myworktd":"Learn about Davide Di Marsilio's most recent projects",
       "restauro":"Restorations",
-      "restaurod":"I restore old photos digitally, removing damage and adding the colors they could have had. The goal is to give new life to images from the past."
+      "restaurod":"I restore old photos digitally, removing damage and adding the colors they could have had. The goal is to give new life to images from the past.",
+      "restauro1":"The art of restoring",
+      "restauro1d":"I offer a professional and efficient service specializing in solo digital restoration of old, damaged, and faded photographs. Using advanced digital restoration techniques, I bring new life to these cherished memories. With meticulous attention to detail, I revive colors, repair scratches and cracks, remove unwanted elements and blemishes, and enhance overall image quality. Whether it's a beloved family portrait or a memorable photo from the past, I ensure that these treasures are preserved for generations to come."
     },
     "404":{
       "notfound":"Not Found",
