--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -29,7 +29,9 @@
       "myworkt":"I Miei Lavori | Davide Di Marsilio",
       "myworktd":"Scopri i progetti più recenti di Davide Di Marsilio",
       "restauro":"Restaurazioni",
-      "restaurod":"Ripristino foto antiche digitalmente, elimando danni e aggiungendo i colori che avrebbero potuto avere. L'obbiettivo è quello di donare nuova vita alle immagini del passato."
+      "restaurod":"Ripristino foto antiche digitalmente, elimando danni e aggiungendo i colori che avrebbero potuto avere. L'obbiettivo è quello di donare nuova vita alle immagini del passato.",
+      "restauro1":"L'arte del restauro",
+      "restauro1d":"Offro un servizio professionale ed efficiente, specializzato nel restauro digitale in solitaria di fotografie vecchie, danneggiate e sbiadite. Utilizzando tecniche avanzate di restauro digitale, do nuova vita a questi cari ricordi. Con una meticolosa attenzione ai dettagli, ravvivo i colori, riparo graffi e crepe, rimuovo elementi indesiderati e imperfezioni e miglioro la qualità complessiva dell'immagine. Che si tratti di un amato ritratto di famiglia o di una foto memorabile del passato, mi assicuro che questi tesori siano conservati per le generazioni a venire."
     },
     "404":{
       "notfound":"Non trovata",
