--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -31,7 +31,7 @@
       "restauro":"Restaurazioni",
       "restaurod":"Ripristino foto antiche digitalmente, elimando danni e aggiungendo i colori che avrebbero potuto avere. L'obbiettivo è quello di donare nuova vita alle immagini del passato.",
       "restauro1":"L'arte del restauro",
-      "restauro1d":"Offro un servizio professionale ed efficiente, specializzato nel restauro digitale in solitaria di fotografie vecchie, danneggiate e sbiadite. Utilizzando tecniche avanzate di restauro digitale, do nuova vita a questi cari ricordi. Con una meticolosa attenzione ai dettagli, ravvivo i colori, riparo graffi e crepe, rimuovo elementi indesiderati e imperfezioni e miglioro la qualità complessiva dell'immagine. Che si tratti di un amato ritratto di famiglia o di una foto memorabile del passato, mi assicuro che questi tesori siano conservati per le generazioni a venire."
+      "restauro1d":"Offro un servizio professionale ed efficiente, specializzato nel restauro digitale di fotografie vecchie, danneggiate e sbiadite. Utilizzando tecniche avanzate di restauro digitale, dando nuova vita a vecchi ricordi. Con una meticolosa attenzione ai dettagli, ravvivo i colori, riparo graffi e crepe, rimuovo imperfezioni ed infine miglioro la qualità complessiva dell'immagine. Che si tratti di un amato ritratto di famiglia o di una foto memorabile del passato, mi assicuro che questi tesori siano conservati per le generazioni a venire."
     },
     "404":{
       "notfound":"Non trovata",
