--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -31,7 +31,7 @@
       "restauro":"Restorations",
       "restaurod":"I restore old photos digitally, removing damage and adding the colors they could have had. The goal is to give new life to images from the past.",
       "restauro1":"The art of restoring",
-      "restauro1d":"I offer a professional and efficient service specializing in solo digital restoration of old, damaged, and faded photographs. Using advanced digital restoration techniques, I bring new life to these cherished memories. With meticulous attention to detail, I revive colors, repair scratches and cracks, remove unwanted elements and blemishes, and enhance overall image quality. Whether it's a beloved family portrait or a memorable photo from the past, I ensure that these treasures are preserved for generations to come."
+      "restauro1d":"I offer a professional and efficient service, specializing in digital restoration of old, damaged and faded photographs. Using advanced digital restoration techniques, giving new life to old memories. With meticulous attention to detail, I brighten colors, repair scratches and cracks, remove imperfections and ultimately improve the overall quality of the image. Whether it is a beloved family portrait or a memorable photo from the past, I make sure these treasures are preserved for generations to come."
     },
     "404":{
       "notfound":"Not Found",
