--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -25,9 +25,11 @@
     },
     "work":{
       "mywork":"I Miei Lavori",
-      "myworkd":"Per avere un'idea delle mie esperienze passate, consultate i miei progetti più recenti qui sotto.",
+      "myworkd":"Per avere un'idea dei miei lavori passati, consultate i miei progetti più recenti qui sotto.",
       "myworkt":"I Miei Lavori | Davide Di Marsilio",
       "myworktd":"Scopri i progetti più recenti di Davide Di Marsilio",
+      "work1":"Splendide grafiche",
+      "work2":"Il mio stile di disegno si caratterizza per l'utilizzo delle silhouette e dei scenari suggestivi. La grafica presenta una somiglianza agli anime, con linee fluide e dettagli accurati. Inoltre, i colori utilizzati sono brillanti, che conferiscono un effetto vivace.",
       "restauro":"Restaurazioni",
       "restaurod":"Ripristino foto antiche digitalmente, elimando danni e aggiungendo i colori che avrebbero potuto avere. L'obbiettivo è quello di donare nuova vita alle immagini del passato.",
       "restauro1":"L'arte del restauro",
