--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,7 +5,7 @@
       "selectedworkb":"View All",
       "footerdev":"Designed & Developed in Portland with ",
       "home":"Home",
-      "work":"Work",
+      "work":"Artworks & Graphics",
       "about":"About",
       "title": " Hello, my name is Davide Di Marsilio",
       "description": "I am an Helpdesk operator and Artist who is currently based in Milan, Italy.",
