--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -5,7 +5,7 @@
       "selectedworkb":"Visualizza tutti",
       "footerdev":"Progettato e Sviluppato a Portland con ",
       "home":"Home",
-      "work":"Lavori",
+      "work":"Lavori Grafici",
       "about":"Chi sono",
       "title": " Ciao, mi chiamo Davide Di Marsilio",
       "description": "Sono un operatore Helpdesk e un artista attualmente residente a Milano, Italia.",
