--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -28,7 +28,7 @@
       "myworkd":"Per avere un'idea dei miei lavori passati, consultate i miei progetti più recenti qui sotto.",
       "myworkt":"I Miei Lavori | Davide Di Marsilio",
       "myworktd":"Scopri i progetti più recenti di Davide Di Marsilio",
-      "work1":"Splendide illustrations",
+      "work1":"Splendide illustrazioni",
       "work2":"Il mio stile di disegno si caratterizza per l'utilizzo delle silhouette e dei scenari suggestivi. La grafica presenta una somiglianza agli anime, con linee fluide e dettagli accurati. Inoltre, i colori utilizzati sono brillanti, che conferiscono un effetto vivace.",
       "work3":"Design di Loghi e Grafiche",
       "work4":"Con il tempo ho maturato una passione per la creazione di loghi accattivanti e semplice. Cerco di seguire quelli che sono i desideri del cliente per raggiungere il logo perfetto.",
