--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -32,9 +32,9 @@
       "work2":"My drawing style is characterized by the use of silhouettes and striking scenery. The graphics bear a resemblance to anime, with flowing lines and accurate details. In addition, the colors used are bright, giving a vivid effect.",
       "work3":"Logo Design & Graphics",
       "work4":"Over time, I have developed a passion for creating eye-catching and simple logos. I try to follow what the client's wishes are to achieve the perfect logo.",
-      "work5":"Creative and Effective Design",
+      "work5":"Creative and Effective",
       "work6":"I am able to create modern-looking logos that are both creative and non-trivial.",
-      "work7":"Clean and Professional Design",
+      "work7":"Clean and Professional",
       "work8":"I have a special love for extremely clean and minimal logos, but at the same time I try to give the graphics an element that is distinguishable and easy to remember.",
       "work9":"Click on the image to learn more about the logo's creative process",
       "work10":"Click on the image to learn more about the logo's creative process and about ",
