--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -32,9 +32,9 @@
       "work2":"Il mio stile di disegno si caratterizza per l'utilizzo delle silhouette e dei scenari suggestivi. La grafica presenta una somiglianza agli anime, con linee fluide e dettagli accurati. Inoltre, i colori utilizzati sono brillanti, che conferiscono un effetto vivace.",
       "work3":"Design di Loghi e Grafiche",
       "work4":"Con il tempo ho maturato una passione per la creazione di loghi accattivanti e semplice. Cerco di seguire quelli che sono i desideri del cliente per raggiungere il logo perfetto.",
-      "work5":"Design Creativo ed Efficace",
+      "work5":"Creativo ed Efficace",
       "work6":"Sono in grado di creare loghi dall'aspetto moderno e allo stesso tempo creativi e non banali.",
-      "work7":"Design Pulito e Professionale",
+      "work7":"Pulito e Professionale",
       "work8":"Ho uno strano amore per i loghi estremamente puliti e minimali, ma allo stesso tempo cerco di donare alla grafica un elemento distinguibile e facile da ricordare.",
       "work9":"Clicca sull'immagine per sapere di più sul processo creativo del logo",
       "work10":"Clicca sull'immagine foto per sapere di più sul processo creativo del logo e su ",
